actualizacion 2 titulo y descripcion inicial

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    Customer Success <br> Management
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Profesional bilingüe -Spa/Eng- con más de 8 años de experiencia en Customer Success, Customer Support y Project Management en empresas de tecnología y SaaS. 
+                    Destaco por mi orientación al cliente, enfoque analítico, planificación meticulosa, mejora continua y comunicación asertiva. 
+                    Ingeniero Comercial UAI aprendiendo sobre SaaS, Cloud, Desarrollo, ITSM.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
