--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="#">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contacto</a>
@@ -47,7 +47,7 @@
 
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
-            <div class="ms-auto col-12 col-md-7 ">
+            <div class="ms-auto col-12 col-md-7">
                 <h1 class="display-1 fw-bold my-5">
                     Customer Success <br> Management
                 </h1>
@@ -57,7 +57,7 @@
                     Ingeniero Comercial UAI aprendiendo sobre SaaS, Cloud, Desarrollo, ITSM.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-outline-info text-light me-4">Proyectos</button>
                     <button class="btn btn-lg btn-info text-light">Contacto</button>
                 </div>
             </div>
