correcciones finales en html y css

--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Canvas para clientes en Mexico</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            La implementación del Customer Success Canvas en la empresa mexicana fue un éxito rotundo. 
+                            La herramienta permitió a la empresa mejorar la retención de clientes, aumentar el valor de por vida del cliente y 
+                            mejorar la satisfacción del cliente.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -132,10 +131,8 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Canvas para clientes en España</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            La implementación del Canvas para clientes en la empresa española fue un éxito rotundo. 
+                            La herramienta permitió a la empresa mejorar la experiencia del cliente, aumentar la satisfacción del cliente y reducir las quejas de los clientes
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -149,10 +146,9 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Customer Journey para empresa de Software de carga de autos elétricos</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            La mejora del customer journey en la empresa de carga de autos eléctricos fue un éxito rotundo. 
+                            La empresa logró mejorar la experiencia del cliente, aumentar la tasa de utilización de las estaciones de carga y 
+                            reducir el tiempo de espera
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
